created list of characters and block with information about chosen character

--- a/src/components/charList/charList.scss
+++ b/src/components/charList/charList.scss
@@ -27,17 +27,23 @@
             height: 200px;
             object-fit: cover;
             transform: translate(-15px, -15px);
+            
         }
         &_selected {
             box-shadow: 0 5px 20px $main-color;
             transform: translateY(-8px);
         }
+        &:hover {
+            transform: translateY(-5px);
+        }
     }
     &__name {
         font-weight: bold;
-        font-size: 22px;
+        font-size: 21px;
         line-height: 29px;
         text-transform: uppercase;
         color: #fff;
+        text-align: center;
     }
+    
 }
