--- a/src/style/button.scss
+++ b/src/style/button.scss
@@ -88,4 +88,8 @@
     &:hover {
         transform: translateY(-5px);
     }
+    &:disabled {
+        // filter: grayscale(.5);
+        filter: sepia(.5);
+    }
 }
