--- a/src/components/comicsList/comicsList.scss
+++ b/src/components/comicsList/comicsList.scss
@@ -1,3 +1,4 @@
+@import '../../style/variables.scss';
 .comics {
     &__list {
         margin-top: 45px;
@@ -28,6 +29,11 @@
             line-height: 18px;
             color: rgba(0, 0, 0, 0.6);
             text-transform: uppercase;
+        }
+       
+        &_selected {
+            box-shadow: 0 5px 20px $main-color;
+            transform: translateY(-8px);
         }
         &:hover {
             transform: translateY(-5px);
