--- a/src/components/charInfo/charInfo.scss
+++ b/src/components/charInfo/charInfo.scss
@@ -7,6 +7,8 @@
         position: relative;
         z-index: 5;
         background-color: #fff;
+        position: sticky;
+        top: 10px;
         &-name {
             font-weight: bold;
             font-size: 22px;
@@ -16,8 +18,16 @@
         .skeleton {
             margin-top: 30px;
         }
+        .close{
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            cursor: pointer;
+        }
+    
     }
     &__basics {
+        position: relative;
         display: grid;
         grid-template-columns: 150px auto;
         column-gap: 25px;
@@ -26,6 +36,7 @@
             height: 150px;
             object-fit: cover;
         }
+        
     }
     &__btns {
         margin-top: 35px;
@@ -61,5 +72,5 @@
         line-height: 24px;
         text-align: center;
     }
-
+    
 }
