--- a/src/components/findChar/findChar.scss
+++ b/src/components/findChar/findChar.scss
@@ -20,7 +20,7 @@
         height: 38px;
         padding: 0px 10px;
         line-height: 25px;
-        box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         margin-top: 15px;
         margin-right: 24px;
         border: none;
