--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -46,7 +46,9 @@ input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0; 
 }
-
+iframe {
+    display: none!important;
+}
 .app {
     width: 1100px;
     margin: 0 auto;
